# shiboken_demo

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/democpplib/: CMakeLists.txt  democppclass.cpp  democppclass.h
cpp/demoqtlib/: CMakeLists.txt  demoqtclass.cpp  demoqtclass.h
examples/: democpptest.py  demoqttest.py
python/: CMakeLists.txt  binding_common.cmake
python/democppbind/: CMakeLists.txt  democppbind.xml
python/democpplibbinding/: CMakeLists.txt  democpplibbinding.h  democpplibbinding.xml
python/demoqtbind/: CMakeLists.txt  demoqtbind.h  demoqtbind.xml
python/demoqtlibbinding/: CMakeLists.txt  demoqtlibbinding.h  demoqtlibbinding.xml
